# augmend-helth-challenge

./: README.md
backend/: Cargo.toml
backend/src/: main.rs
frontend/: .firebaserc  package-lock.json  package.json
frontend/src/lib/: firebase.client.ts  session.ts
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte
frontend/src/routes/protected/: +page.svelte
