[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10.64"
postgres-openssl = "0.5.0"
actix-web = "4"
serde_json = "1.0.116"
serde = { version = "1.0.199", features = ["serde_derive"] }
tokio-postgres = "0.7.10"
actix-cors = "0.7.0"

